objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>SaaS</fullName>
        <description>SaaS</description>
        <isActive>true</isActive>
        <values>
            <fullName>%28100%25%29 %E2%80%93 Debooking</fullName>
        </values>
        <values>
            <fullName>%2835%25%29 %E2%80%93 Debooking</fullName>
        </values>
        <values>
            <fullName>%2850%25%29 %E2%80%93 Debooking</fullName>
        </values>
        <values>
            <fullName>%2875%25%29 %E2%80%93 Debooking</fullName>
        </values>
        <values>
            <fullName>0%25 - Lost Oppty</fullName>
        </values>
        <values>
            <fullName>0%25 - Lost Recycle</fullName>
        </values>
        <values>
            <fullName>10%25 - Lead</fullName>
        </values>
        <values>
            <fullName>100%25 - Signed</fullName>
        </values>
        <values>
            <fullName>20%25 - Qualification</fullName>
        </values>
        <values>
            <fullName>30%25 - Meeting Setup</fullName>
        </values>
        <values>
            <fullName>35%25 - Oppty Validation</fullName>
        </values>
        <values>
            <fullName>40%25 - Engaged w%2F Project</fullName>
        </values>
        <values>
            <fullName>50%25 - Initial Proposal</fullName>
        </values>
        <values>
            <fullName>60%25 - Eval%2E of Options</fullName>
        </values>
        <values>
            <fullName>65%25 - Resol%2E of Concerns</fullName>
        </values>
        <values>
            <fullName>75%25 - Verbal Agreement</fullName>
        </values>
        <values>
            <fullName>90%25 - Legal Review</fullName>
        </values>
        <values>
            <fullName>95%25 - Awaiting Signature</fullName>
        </values>
        <values>
            <fullName>97%25 - Contract Signed%2FDependencies</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AE_Secondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AE Assisting in Sale</description>
        <label>AE-CSM Support Field</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Account.Owner.FirstName  &amp; &quot; &quot; &amp;  Account.Owner.LastName</formula>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Campaign_End_Date__c</fullName>
        <label>Ad Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ad_Campaign_Start_Date__c</fullName>
        <label>Ad Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ad_Serving_Method__c</fullName>
        <description>Third-party billing method.  If site-served please mention here.</description>
        <label>Ad Serving Method (for billing)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Buyer__c</fullName>
        <description>Ad agency name</description>
        <inlineHelpText>Ad agency name</inlineHelpText>
        <label>Agency (Buyer)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>360i</fullName>
                </value>
                <value>
                    <fullName>3Atlanta</fullName>
                </value>
                <value>
                    <fullName>4D</fullName>
                </value>
                <value>
                    <fullName>AB InBev</fullName>
                </value>
                <value>
                    <fullName>Absolute Media</fullName>
                </value>
                <value>
                    <fullName>AKQA</fullName>
                </value>
                <value>
                    <fullName>ARC Worldwide Chicago</fullName>
                </value>
                <value>
                    <fullName>AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>Avenue A Razorfish</fullName>
                </value>
                <value>
                    <fullName>Bailey Lauerman Nebraska</fullName>
                </value>
                <value>
                    <fullName>Bard Advertising Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Barkley</fullName>
                </value>
                <value>
                    <fullName>Berstein Rein</fullName>
                </value>
                <value>
                    <fullName>Blue Chip</fullName>
                </value>
                <value>
                    <fullName>Bolin</fullName>
                </value>
                <value>
                    <fullName>Brothers &amp; Co. Tulsa</fullName>
                </value>
                <value>
                    <fullName>Brunner Pittsburgh</fullName>
                </value>
                <value>
                    <fullName>Butler, Shine Stern +</fullName>
                </value>
                <value>
                    <fullName>BVK Chicago</fullName>
                </value>
                <value>
                    <fullName>BVK Milwaukee</fullName>
                </value>
                <value>
                    <fullName>Campbell Ewald</fullName>
                </value>
                <value>
                    <fullName>Carat</fullName>
                </value>
                <value>
                    <fullName>Carat – LA</fullName>
                </value>
                <value>
                    <fullName>Carat – SF</fullName>
                </value>
                <value>
                    <fullName>Carmichael Lynch</fullName>
                </value>
                <value>
                    <fullName>Catapult Marketing Nashville</fullName>
                </value>
                <value>
                    <fullName>Centro</fullName>
                </value>
                <value>
                    <fullName>ClickHere</fullName>
                </value>
                <value>
                    <fullName>Collaborative Marketing Group</fullName>
                </value>
                <value>
                    <fullName>Colle McVoy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_End_Date__c</fullName>
        <description>Oppty Agreement End Date formerly known as Next Contract Renewal Date</description>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <description>Tracks the oppty Agreement Start Date. Formerly known as Contract Effective Date</description>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Americas_Commited_Deals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Americas Committed Deals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Process Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Identifies the step of the approval process.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_AM__c</fullName>
        <description>Assigned Ad Ops</description>
        <inlineHelpText>This is the person on the support team that is creating your proposal and managing your campaign</inlineHelpText>
        <label>Pre-Sale Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Janet Kim</fullName>
                </value>
                <value>
                    <fullName>Samantha Kahn</fullName>
                </value>
                <value>
                    <fullName>Allison Beatrice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booked_eCPM__c</fullName>
        <description>Ads only.  Hidden from all except ads and finance.</description>
        <label>Total Booked eCPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <description>Brand name = specific brand line being promoted, ie: Tide.  Account Name would be &apos;P&amp;G&apos;.</description>
        <label>Brand Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Case_ROI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Case – ROI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CE_Projects__c</fullName>
        <description>This field is to track if any CE products exist for the opportunity to inform EMEA CE when it hits a certain stage.  Used for Workflow notification to EMEA when opportunity is over 75% and has service products.</description>
        <inlineHelpText>This field is to track if any CE products exist for the opportunity to inform EMEA CE when it hits a certain stage.  Used for Workflow notification to EMEA when opportunity is over 75% and has service products.</inlineHelpText>
        <label>CE Projects?</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Name__c</field>
            <operation>contains</operation>
            <value>Service</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Name__c</field>
            <operation>notContain</operation>
            <value>Advertising</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CSDirectorId__c</fullName>
        <formula>Owner.CSDirector__c</formula>
        <label>CS Director Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CS Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Vertical__c</fullName>
        <description>Campaign vertical(s)</description>
        <inlineHelpText>Campaign vertical(s)</inlineHelpText>
        <label>Campaign Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Baby</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>CPG: Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>CPG: Health &amp; Beauty</fullName>
                </value>
                <value>
                    <fullName>CPG: Household</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Media &amp; Entertainment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Telecom</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Duration__c</fullName>
        <description>Target EMEA metric of 35%-Close duration</description>
        <formula>IF(IsWon, CloseDate-Market_Dev_Close_Date__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_by_AE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if an oppty was closed by an AE or a CSM</description>
        <inlineHelpText>Finance use only:
Check if closed by AE
Uncheck if closed by CSM

Applicable only for Upsells</inlineHelpText>
        <label>Closed by AE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_E4B__c</fullName>
        <description>Ad sales competitors</description>
        <inlineHelpText>Ad sales competitors</inlineHelpText>
        <label>RichAds Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Longboard Media</fullName>
                </value>
                <value>
                    <fullName>Searchandise</fullName>
                </value>
                <value>
                    <fullName>Triad</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_expiration_date__c</fullName>
        <label>Competitor expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competitor_rate_card_available__c</fullName>
        <inlineHelpText>Was the competitor’s pricing/rate card made available to you? If so, please include.</inlineHelpText>
        <label>Competitor pricing available?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitors_Involved__c</fullName>
        <label>Competitors Involved</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Adobe</fullName>
                </value>
                <value>
                    <fullName>AdRoll</fullName>
                </value>
                <value>
                    <fullName>Agilone</fullName>
                </value>
                <value>
                    <fullName>Algolia</fullName>
                </value>
                <value>
                    <fullName>AntVoice</fullName>
                </value>
                <value>
                    <fullName>Apptus</fullName>
                </value>
                <value>
                    <fullName>ATG</fullName>
                </value>
                <value>
                    <fullName>ATTRAQT</fullName>
                </value>
                <value>
                    <fullName>Autonomy</fullName>
                </value>
                <value>
                    <fullName>Avail</fullName>
                </value>
                <value>
                    <fullName>Baynote</fullName>
                </value>
                <value>
                    <fullName>Bazaarvoice</fullName>
                </value>
                <value>
                    <fullName>Bloomreach</fullName>
                </value>
                <value>
                    <fullName>Blueconic</fullName>
                </value>
                <value>
                    <fullName>BlueCore</fullName>
                </value>
                <value>
                    <fullName>Certona</fullName>
                </value>
                <value>
                    <fullName>Chaordic</fullName>
                </value>
                <value>
                    <fullName>ChoiceStream</fullName>
                </value>
                <value>
                    <fullName>Clerk.io</fullName>
                </value>
                <value>
                    <fullName>CNET</fullName>
                </value>
                <value>
                    <fullName>CoreMetrics</fullName>
                </value>
                <value>
                    <fullName>Criteo</fullName>
                </value>
                <value>
                    <fullName>Demandware</fullName>
                </value>
                <value>
                    <fullName>Devatics</fullName>
                </value>
                <value>
                    <fullName>Dynamic Yield</fullName>
                </value>
                <value>
                    <fullName>Econda</fullName>
                </value>
                <value>
                    <fullName>Endeca</fullName>
                </value>
                <value>
                    <fullName>Epoq</fullName>
                </value>
                <value>
                    <fullName>Evergage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors_Won_or_Lost__c</fullName>
        <description>This is the new field that consolidates all of the old competitor fields in Salesforce (competitors involved, competitors won against, competitors lost against, competitor displaced.</description>
        <inlineHelpText>This is the new field that consolidates all of the old competitor fields in Salesforce (competitors involved, competitors won against, competitors lost against, competitor displaced.</inlineHelpText>
        <label>Competitors Won or Lost Against</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Adobe</fullName>
                </value>
                <value>
                    <fullName>AdRoll</fullName>
                </value>
                <value>
                    <fullName>Agilone</fullName>
                </value>
                <value>
                    <fullName>Algolia</fullName>
                </value>
                <value>
                    <fullName>AntVoice</fullName>
                </value>
                <value>
                    <fullName>Apptus</fullName>
                </value>
                <value>
                    <fullName>ATG</fullName>
                </value>
                <value>
                    <fullName>ATTRAQT</fullName>
                </value>
                <value>
                    <fullName>Autonomy</fullName>
                </value>
                <value>
                    <fullName>Avail</fullName>
                </value>
                <value>
                    <fullName>Baynote</fullName>
                </value>
                <value>
                    <fullName>Bazaarvoice</fullName>
                </value>
                <value>
                    <fullName>Bloomreach</fullName>
                </value>
                <value>
                    <fullName>Blueconic</fullName>
                </value>
                <value>
                    <fullName>BlueCore</fullName>
                </value>
                <value>
                    <fullName>Certona</fullName>
                </value>
                <value>
                    <fullName>Chaordic</fullName>
                </value>
                <value>
                    <fullName>ChoiceStream</fullName>
                </value>
                <value>
                    <fullName>Clerk.io</fullName>
                </value>
                <value>
                    <fullName>CNET</fullName>
                </value>
                <value>
                    <fullName>CoreMetrics</fullName>
                </value>
                <value>
                    <fullName>Criteo</fullName>
                </value>
                <value>
                    <fullName>Demandware</fullName>
                </value>
                <value>
                    <fullName>Devatics</fullName>
                </value>
                <value>
                    <fullName>Dynamic Yield</fullName>
                </value>
                <value>
                    <fullName>Econda</fullName>
                </value>
                <value>
                    <fullName>Endeca</fullName>
                </value>
                <value>
                    <fullName>Epoq</fullName>
                </value>
                <value>
                    <fullName>Fredhopper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consulting_Hours_Amount__c</fullName>
        <description>Total of the Consulting Hours on the Opportunity</description>
        <inlineHelpText>Total of the Consulting Hours on the Opportunity</inlineHelpText>
        <label>Total Consulting Hours Amount</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Name__c</field>
            <operation>equals</operation>
            <value>2.0 Consulting Hours, 2.0 Bucket of Hours</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contracts_Prepared_and_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracts Prepared and Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Costco_Booked_Amount__c</fullName>
        <label>Costco Booked Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costco_Earned_Amount__c</fullName>
        <description>Roll up calculated field</description>
        <label>Costco Earned Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Retailer__c</field>
            <operation>equals</operation>
            <value>Costco</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Costco_Proposed_Retargeting_Amount__c</fullName>
        <label>Costco Proposed Retargeting Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costco_Proposed__c</fullName>
        <label>Costco Proposed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costco_Proposed_eCPM__c</fullName>
        <label>Costco Proposed eCPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costco__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Costco</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_in_ACV__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Count in ACV unless OportunityType is Renewal</description>
        <label>Count in ACV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Resource_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Resource Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creative_Production_Fee__c</fullName>
        <label>Creative Production Fee</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Resource_Request_End_Date__c</fullName>
        <formula>CloseDate + 76</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Resource Request End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Resource_Request_Start_Date__c</fullName>
        <formula>CloseDate + 14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Resource Request Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Differentiator_for_who_won_the_deal__c</fullName>
        <description>What was the main differentiator for who won the deal (RichRelevance or a Competitor)  in 2-3 sentences?</description>
        <inlineHelpText>What was the main differentiator for who won the deal (RichRelevance or a Competitor)?  A feature, pricing, etc.  in 2-3 sentences?</inlineHelpText>
        <label>Main Differentiator for who won the deal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(Total_List_Price__c == 0, 0, 1-Amount/Total_List_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discover_Surpassed_Date__c</fullName>
        <label>Discover Surpassed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_1__c</fullName>
        <description>Due date for the next step in the close plan.  Should be filled out when  &quot;Close Plan Next Step&quot; is populated on the opportunity.</description>
        <inlineHelpText>Due date for the next step in the close plan.  Should be filled out when &quot;Close Plan Next Step&quot; is populated on the opportunity.</inlineHelpText>
        <label>Close Plan Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E4B_Product__c</fullName>
        <description>E4B Product</description>
        <inlineHelpText>E4B Product</inlineHelpText>
        <label>RichAds Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Availigo</fullName>
                    <default>true</default>
                    <label>Availigo</label>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>RichPlacement</fullName>
                </value>
                <value>
                    <fullName>Push-Down Bar (TGT only)</fullName>
                </value>
                <value>
                    <fullName>Push-Down Bar (Walmart only)</fullName>
                </value>
                <value>
                    <fullName>Searchandise</fullName>
                </value>
                <value>
                    <fullName>Searchandise (DEC)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E4B_Sales_Region__c</fullName>
        <description>E4B Sales Region</description>
        <inlineHelpText>E4B Sales Region</inlineHelpText>
        <label>RichAds Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>Bay Area</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Earned_Revenue__c</fullName>
        <description>Ads only.  Hidden from all except ads and finance.</description>
        <label>Total Earned Revenue (FINANCE USE ONLY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Enable_Renewal_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Renewal Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Tradeshow__c</fullName>
        <label>Event/Tradeshow</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2020 B2B Online</fullName>
                </value>
                <value>
                    <fullName>2020 eCommerce Brasil Forum</fullName>
                </value>
                <value>
                    <fullName>2020 eTailing Summit</fullName>
                </value>
                <value>
                    <fullName>2020 eTail Summit</fullName>
                </value>
                <value>
                    <fullName>2020 eTail West</fullName>
                </value>
                <value>
                    <fullName>2020 NRF Big Show</fullName>
                </value>
                <value>
                    <fullName>2020 Shoptalk</fullName>
                </value>
                <value>
                    <fullName>2020 VTEX Day</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>2019 B2B East</fullName>
                </value>
                <value>
                    <fullName>2019 B2B Online</fullName>
                </value>
                <value>
                    <fullName>2019 Big Boss</fullName>
                </value>
                <value>
                    <fullName>2019 Brazil Pos-NRF</fullName>
                </value>
                <value>
                    <fullName>2019 D-Congress</fullName>
                </value>
                <value>
                    <fullName>2019 Drapers</fullName>
                </value>
                <value>
                    <fullName>2019 eCommerce Brasil Forum</fullName>
                </value>
                <value>
                    <fullName>2019 EMEA B2B Online</fullName>
                </value>
                <value>
                    <fullName>2019 EMEA Personalization Summit</fullName>
                </value>
                <value>
                    <fullName>2019 Etail Berlin</fullName>
                </value>
                <value>
                    <fullName>2019 Etail Nordics</fullName>
                </value>
                <value>
                    <fullName>2019 eTail West</fullName>
                </value>
                <value>
                    <fullName>2019 Europe One to One</fullName>
                </value>
                <value>
                    <fullName>2019 NRF Big Show</fullName>
                </value>
                <value>
                    <fullName>2019 Retail Week Live</fullName>
                </value>
                <value>
                    <fullName>2019 ShopTalk</fullName>
                </value>
                <value>
                    <fullName>2019 Spain One to One</fullName>
                </value>
                <value>
                    <fullName>2019 The Hive Stockholm</fullName>
                </value>
                <value>
                    <fullName>2019 The Hive UK</fullName>
                </value>
                <value>
                    <fullName>2019 US Personalization Summit SF</fullName>
                </value>
                <value>
                    <fullName>2019 VTEX Customer Connection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Business_Sponsor_Identified__c</fullName>
        <description>If contract will be signed by an executive, please list their name and if relevant, title.</description>
        <inlineHelpText>If contract will be signed by an executive, please list their name and if relevant, title.</inlineHelpText>
        <label>Signator Sponsor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Delivery_Report_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check this box once the final delivery report has been uploaded</description>
        <label>Del Ads: Final Delivery Report Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Check_Notes__c</fullName>
        <description>Provides notes to the sales and client services teams about the status of the operations check by finance.</description>
        <inlineHelpText>Provides notes to the sales and client services teams about the status of the operations check by finance.</inlineHelpText>
        <label>Finance Check Notes</label>
        <type>TextArea</type>
    </fields>
</CustomObject>